--- a/configs/hardware-node-03.yaml
+++ b/configs/hardware-node-03.yaml
@@ -1,3 +1,5 @@
+# from https://github.com/tinkerbell/tink/blob/main/config/crd/examples/hardware.yaml
+#
 apiVersion: "tinkerbell.org/v1alpha1"
 kind: Hardware
 metadata:
